feat: added meta, css and js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         content="Tetra Kids: Block Party, a fun engaging version of the classic game of Tetris.">
     <meta name="keywords"
         content="Tetra Kids, Tetris for Kids, Games for kids, kid's game, Tetris, block game">
+    <!-- Script file -->
+    <script src="app.js"></script>
     <!-- Title -->
     <title>Tetra Kids: Block Party</title>
     <!-- Favicon -->
