--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <main>
     <section>
+    <!-- Score -->
     <h2> SCORE: <span id="score">0</span></h2>
+    <!-- Start Button -->
     <button id="start_btn">Start Game</button>
+    <!-- Grid for 288 blocks -->
     <div class="grid">
         <div></div>
         <div></div>
@@ -314,5 +318,6 @@
         <div></div>
     </div>
 </section>
+</main>
 </body>
 </html>
