--- a/index.html
+++ b/index.html
@@ -316,6 +316,18 @@
         <div></div>
         <div></div>
         <div></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
+        <div class="blocked"></div>
     </div>
 </section>
 </main>
