feat: added button with left() function on click

--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
         <div class="blocked"></div>
         <div class="blocked"></div>
     </div>
+    <button id="moveLeft" onclick="left()">Left</button>
 </section>
 </main>
 </body>
