fix: added eventlistener in javascript file for left button

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <div class="blocked"></div>
         <div class="blocked"></div>
     </div>
-    <button id="moveLeft" onclick="left()">Left</button>
+    <button id="moveLeft">Left</button>
 </section>
 </main>
 </body>
