feat: added right, flip and drop buttons

--- a/index.html
+++ b/index.html
@@ -329,7 +329,12 @@
         <div class="blocked"></div>
         <div class="blocked"></div>
     </div>
-    <button id="moveLeft">Left</button>
+    <div class="flexCenter">
+        <button id="moveLeft">Left</button><button id="dropShape">Drop</button><button id="moveRight">Right</button>
+    </div>
+    <div class="flexCenter">
+        <button id="flipShape">Flip</button>
+    </div>
 </section>
 </main>
 </body>
