change: renamed app.js to script.js and moved it in the javascript folder within the assets folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Tetra Kids, Tetris for Kids, Games for kids, kid's game, Tetris, block game">
     <!-- Script file -->
-    <script src="app.js"></script>
+    <script src="assets/javascript/script.js"></script>
     <!-- Title -->
     <title>Tetra Kids: Block Party</title>
     <!-- Favicon -->
