bug: commented out speed buttons and functions
Speed up function was working correctly, but the speed down function was also speeding the blocks up

--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
     <div class="flexCenter">
         <button id="flipShape">Flip</button>
     </div>
-    <button id="speedUp"> + </button>
-    <button id="speedDown">-</button>
+    <!-- <button id="speedUp"> + </button>
+    <button id="speedDown">-</button> -->
 </section>
 </main>
 </body>
