feat: added style and class to hide bottom row of grid

--- a/index.html
+++ b/index.html
@@ -316,18 +316,18 @@
         <div></div>
         <div></div>
         <div></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
-        <div class="blocked"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
+        <div class="blocked hide"></div>
     </div>
     <div class="flexCenter">
         <button id="moveLeft">Left</button><button id="dropShape">Drop</button><button id="moveRight">Right</button>
