--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
           <div class="blocked hide"></div>
         </div>
         <div class="flexCenter">
-          <button id="moveLeft">Left</button><button id="dropShape">Drop</button
-          ><button id="moveRight">Right</button>
+          <a id="moveLeft">  <img src="/assets/images/leftArrow.png"></a><button id="dropShape">Drop</button
+          ><a id="moveRight"><img src="/assets/images/rightArrow.png"></a>
         </div>
         <div class="flexCenter">
           <button id="flipShape">Flip</button>
