feat: added flip and downarrow images

--- a/index.html
+++ b/index.html
@@ -348,11 +348,12 @@
           <div class="blocked hide"></div>
         </div>
         <div class="flexCenter">
-          <a id="moveLeft">  <img src="/assets/images/leftArrow.png"></a><button id="dropShape">Drop</button
-          ><a id="moveRight"><img src="/assets/images/rightArrow.png"></a>
+          <a id="moveLeft"> <img src="/assets/images/leftArrow.png" /></a>
+          <a id="flipShape"><img src="/assets/images/flipBtn.png" /></a>
+          <a id="moveRight"><img src="/assets/images/rightArrow.png" /></a>
         </div>
         <div class="flexCenter">
-          <button id="flipShape">Flip</button>
+          <a id="dropShape"><img src="/assets/images/downArrow.png" /></a>
         </div>
       </section>
     </main>
