fix: corrected img path

--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
           <div class="blocked hide"></div>
         </div>
         <div class="flexCenter">
-          <a id="moveLeft"> <img src="/assets/images/leftArrow.png" /></a>
-          <a id="flipShape"><img src="/assets/images/flipBtn.png" /></a>
-          <a id="moveRight"><img src="/assets/images/rightArrow.png" /></a>
+          <a id="moveLeft"> <img src="./assets/images/leftArrow.png" /></a>
+          <a id="flipShape"><img src="./assets/images/flipBtn.png" /></a>
+          <a id="moveRight"><img src="./assets/images/rightArrow.png" /></a>
         </div>
         <div class="flexCenter">
-          <a id="dropShape"><img src="/assets/images/downArrow.png" /></a>
+          <a id="dropShape"><img src="./assets/images/downArrow.png" /></a>
         </div>
       </section>
     </main>
