feat: added game rules div with content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,68 @@
         <h2>SCORE: <span id="score">0</span></h2>
         <!-- Container for game rules and start button -->
         <div class="game-rules">
+          <h2>Welcome to Tetra Kids: Block Party!</h2>
+          <br />
+          <h4>Game Objective:</h4>
+          <p>
+            Blocks will fall down on your screen when the game start. Try to
+            fill up rows by moving blocks on the game grid.<br> <img
+            src="./assets/images/row.png" / alt="image showing how a row can be
+            filled with a block"><br> Score as many points as you can before the
+            blocks can no longer move.<br>
+            <img
+              src="./assets/images/topgrid.png"
+              alt="image showing a block that can no longer move down"
+            /><br>
+          </p>
+          <h4>Game Controls:</h4>
+          <p class="controls-keyboard">
+            You can move the blocks left and right using the arrow keys on your
+            keyboard or by clicking the left and right buttons on your
+            screen:<br />
+            <img
+              src="./assets/images/leftArrow.png"
+              alt="image of left arrow button"
+            />
+            <img
+              src="./assets/images/rightArrow.png"
+              alt="image of right arrow button"
+            /><br>
+            You can also rotate buttons by using the up arrow on your keyboard
+            or by clicking the flip button on your screen: <br>
+            <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
+            If you're feeling brave, you can drop blocks down the grid faster by
+            using the down arrow on your keyboard or by clicking the drop button
+            on your screen:<br>
+            <img
+              src="./assets/images/downArrow.png"
+              alt="image of the drop button"
+            /><br>
+            Click the start button to begin!
+          </p>
+          <p class="controls-mobile">
+            You can move the blocks left and right by tapping the left and right
+            buttons on your screen:<br />
+            <img
+              src="./assets/images/leftArrow.png"
+              alt="image of left arrow"
+            />
+            <img
+              src="./assets/images/rightArrow.png"
+              alt="image of right arrow"
+            /><br>
+            You can also rotate buttons by tapping the flip button on your
+            screen:<br>
+            <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
+            If you're feeling brave, you can drop blocks down the grid faster
+            tapping the drop button on your screen:<br>
+            <img
+              src="./assets/images/downArrow.png"
+              alt="image of the drop button"
+            /><br>
+            Click the start button to begin!
+          </p>
+
           <!-- Start Button -->
           <a id="start_btn"
             ><img src="./assets/images/startBtn.png" alt="Start Button"
