feat: made changes to game_rules text format

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         <!-- Score -->
         <h2>SCORE: <span id="score">0</span></h2>
         <!-- Container for game rules and start button -->
-        <div class="game-rules">
+        <div id="game_rules">
           <h2>Welcome to Tetra Kids: Block Party!</h2>
           <br />
-          <h4>Game Objective:</h4>
+          <h4>Game Objective:</h4><br>
           <p>
-            Blocks will fall down on your screen when the game start. Try to
-            fill up rows by moving blocks on the game grid.<br> <img
+            Blocks will fall down on your screen when the game starts. Try to
+            fill up rows by moving blocks on the grid.<br> <img
             src="./assets/images/row.png" / alt="image showing how a row can be
             filled with a block"><br> Score as many points as you can before the
             blocks can no longer move.<br>
@@ -67,7 +67,8 @@
               alt="image showing a block that can no longer move down"
             /><br>
           </p>
-          <h4>Game Controls:</h4>
+          <br>
+          <h4>Game Controls:</h4><br>
           <p class="controls-keyboard">
             You can move the blocks left and right using the arrow keys on your
             keyboard or by clicking the left and right buttons on your
