doc: corrected spelling

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               src="./assets/images/rightArrow.png"
               alt="image of right arrow button"
             /><br>
-            You can also rotate buttons by using the up arrow on your keyboard
+            You can also rotate blocks by using the up arrow on your keyboard
             or by clicking the flip button on your screen: <br>
             <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
             If you're feeling brave, you can drop blocks down the grid faster by
@@ -104,7 +104,7 @@
               src="./assets/images/rightArrow.png"
               alt="image of right arrow"
             /><br>
-            You can also rotate buttons by tapping the flip button on your
+            You can also rotate blocks by tapping the flip button on your
             screen:<br>
             <img src="./assets/images/flipBtn.png" alt="image of flip button" /><br>
             If you're feeling brave, you can drop blocks down the grid faster
