feat: added play again image, added styling to game_end paragraph and span

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <p>Your Final Score: <span id="final_score"></span></p>
           <img
             id="play_again"
-            src="playAgainBtn.png"
+            src="./assets/images/playAgainBtn.png"
             alt="button to refresh page and play again"
           />
         </div>
